test/corpus/fail/M0173.mo
=========
M0173.mo
=========

to_candid ([var 1]) : Blob

---

(source_file
  (exp_dec
    (annot_exp_object
      (to_candid_exp
        (array_exp
          (lit_exp
            (int_literal))))
      (path_typ
        (typ_path
          (type_identifier))))))
